fixed: add top spacing

--- a/docs/output.css
+++ b/docs/output.css
@@ -1566,6 +1566,10 @@ input.tab:checked + .tab-content,
   margin-top: 1.25rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .block {
   display: block;
 }
